<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Joule Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kilojoule_calculater">KilojouleCalculater</string>
    <string name="breakfastButtonTag">breakfastButton</string>
    <string name="lunchButtonTag">lunchButton</string>
    <string name="dinnerButtonTag">dinnerButton</string>
    <string name="snackButtonTag">snackButton</string>
    <string name="gymButtonTag">gymButton</string>
    <string name="sportButtonTag">sportButton</string>
    <string name="joggingButtonTag">joggingButton</string>
    <string name="breakfast">Breakfast</string>
    <string name="gym">Gym</string>
    <string name="date">Date</string>
    <string name="energy_intake_kj">Energy Intake (kj)</string>
    <string name="todaysdate">todaysDate</string>
    <string name="_0">0</string>
    <string name="jogging">Jogging</string>
    <string name="_0_kj" tools:ignore="ExtraTranslation">0 kj</string>
    <string name="select_meals_or_activities_for_the_day">Select meals or activities for the day</string>
    <string name="sport">Sport</string>

    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="energy_out_kj">Energy Out (kj)</string>

    <string name="total_in_kj">Total in kj:</string>
    <string name="save_day">Save Day</string>
    <string name="dinner">Dinner</string>

    <string name="total_0_kj">Total = 0 kj</string>
    <string name="menu_refresh">refresh</string>
    <string name="title_activity_dairy">Dairy</string>
    <string name="dateOfEntry">thedate</string>
    <string name="_45_kj">45 kj</string>
    <string name="total_energy_out">Total Energy Out:</string>
    <string name="total_energy_intake">Total Energy Intake:</string>
    <string name="net_energy">Net Energy:</string>
    <string name="_5_kj">5 kj</string>

    <string name="_50_kj">50 kj</string>
    <string name="todo">TODO</string>
    <string name="average">Average:</string>
    <string name="consistency_is_the_key">Consistency is the key!</string>
</resources>
