<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dairy">

    <include layout="@layout/content_dairy" />


    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="659dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/leftButton"
            android:layout_width="67dp"
            android:layout_height="64dp"
            android:layout_below="@id/AppBarLayout"
            android:contextClickable="true"
            android:onClick="left"
            app:srcCompat="@drawable/left" />

        <TextView
            android:id="@+id/dairyDateTextView"
            android:layout_width="240dp"
            android:layout_height="64dp"

            android:layout_below="@id/AppBarLayout"
            android:layout_toRightOf="@id/leftButton"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/rightButton"
            android:layout_width="67dp"
            android:layout_height="64dp"
            android:layout_below="@id/AppBarLayout"
            android:layout_toRightOf="@id/dairyDateTextView"
            android:contextClickable="true"
            android:onClick="right"
            app:srcCompat="@drawable/right" />

        <LinearLayout
            android:id="@+id/layoutD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dairyDateTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/net_energy"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/dairyNetTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_energy_intake"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/dairyIntakeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_energy_out"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/dairyOutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDairy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:foreground="@drawable/plus1"
        android:onClick="fabClicked"
        app:backgroundTint="@android:color/holo_green_light" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>